=== 1.8.1 (21 May 2010)

* Fixed bugs in tokenization.
* Changed to libmicrohttpd threaded model.

=== 1.8.0 (20 May 2010)

* Fixed problems on Snow Leopard.
* Update to latest libmicrohttpd.
* Added a C based tokenizer and removed support for external tokenizer service.

=== 1.7.1 (5 March 2009)

* Fixed cache pruning bug using hard coded time.

=== 1.7.0 (19 December 2008)

* Removed the storage of feeds.

=== 1.6.0 (6 November 2008)

* Change item cache to store tokens and xml as blobs in separate SQLite databases.

=== 1.5.2 (12 October 2008)

* Fixed slow point in item tokenization.  Was caused by libcurl sending a Expect: 100-continue header to the tokenizer.

=== 1.5.1 (27 September 2008)

* Fixed deadlock bug when purging old jobs.

=== 1.5.0 (11 August 2008)

* Added support for HMAC authentication.

=== 1.4.3 (7 July 2008)

* Added old job purger.
* Update item cache DB user_version to 3

=== 1.4.2 (25 June 2008)

* Fixed deadlock when adding items.
* Fixed long wait on shutdown.

=== 1.4.1 (24 June 2008) 

* Changed writing of atom documents to use frwite so we don't need to deal with char encoding.

=== 1.4.0 (16 June 2008)

* Restructure and optimization of item cache format.

=== 1.3.0 (4 June 2008)
 
* Support for getting the clues for a tag and item.

=== 1.2.4 (24 May 2008)

 * Make sure to tokenize items that already exist but have no tokens.
 * Loosen up item addition restrictions.  They should only require an id.

=== 1.2.3  (23 May 2008)
 
 * Fixed various memory leaks

=== 1.2.2  (22 May 2008)

 * Fixed memory leak when updating tagger.

=== 1.2.1  (21 May 2008)

 * Fixed bug in setting content length for PUTed taggings.
 * Fixed changing rowid when an item is inserted multiple times. 
 * Removed db id from internal representation of item - just use the string id.

=== 1.2.0  (20 May 2008)

 * Added Tagger Cache.
 * Classifier definitions are fetched via HTTP.
 * Classifier results are sent via HTTP.
 * Removed MySQL dependency.