@@ -43,7 +43,8 @@ static double probability_function(const Pool *positive, const Pool *negative, c
 static void setup(void) {
   setup_fixture_path();
   read_document("fixtures/complete_tag.atom");
-  item_cache_create(&item_cache, "fixtures/valid", &item_cache_options);
+  system("rm -Rf /tmp/valid-copy && cp -R fixtures/valid /tmp/valid-copy && chmod -R 755 /tmp/valid-copy");
+  item_cache_create(&item_cache, "/tmp/valid-copy", &item_cache_options);
   tagger = build_tagger(document, item_cache);
   train_tagger(tagger, item_cache);
   tagger->probability_function = &probability_function;
