@@ -1,3 +1,7 @@
+=== Current
+
+* Record last used at whenever an item is fetched.
+
 === 1.8.1 (21 May 2010)
 
 * Fixed bugs in tokenization.
